# qeletrika

./: CMakeLists.txt  CoursesDownloader.cpp  CoursesDownloader.h  DataProvider.cpp  DataProvider.h  ItemDelegate.cpp  ItemDelegate.h  PricesDownloader.cpp  PricesDownloader.h  README.md  ReviewLoader.cpp  ReviewLoader.h  autotablemodel.h  data.cpp  data.h  db.sql  itablemodel.cpp  itablemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.cpp  settings.h  settings.ui
